--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
         </form>
 
         <a href="/history" class="history-btn">📋 View Mood History</a>
+<a href="/logout" class="logout-btn">Sign Out</a>
     </div>
 
 </body>
