--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,8 @@
             <button type="submit">Login</button>
         </form>
 
-        <p class="auth-link">Don't have an account? <a href="/register">Register here</a></p>
+<p class="auth-link">Don't have an account? <a href="/register">Register here</a></p>
+<p class="auth-link"><a href="/forgot-password">Forgot your password?</a></p>
     </div>
 </body>
 </html>
