--- a/templates/register.html
+++ b/templates/register.html
@@ -21,6 +21,9 @@
             <p class="input-label">Username</p>
             <input type="text" name="username" placeholder="Choose a username" required>
 
+            <p class="input-label">Email</p>
+            <input type="email" name="email" placeholder="Enter your email" required>
+
             <p class="input-label">Password</p>
             <input type="password" name="password" placeholder="Choose a password" required>
 
